--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,16 @@
 [submodule "deps/interface"]
 	path = deps/interface
 	url = https://github.com/zenustech/zs-interface.git
+[submodule "deps/utf8"]
+	path = deps/utf8
+	url = https://github.com/nemtrif/utfcpp.git
+[submodule "deps/cppcoro"]
+	path = deps/cppcoro
+	url = https://github.com/andreasbuhr/cppcoro
+[submodule "deps/slang"]
+	path = deps/slang
+	url = https://github.com/zenustech/slang.git
+[submodule "deps/zpc_jit"]
+	path = deps/zpc_jit
+	url = https://github.com/zenustech/POC_zpc_jit.git
+	shallow = true
